@@ -1,4 +1,3 @@
---sun-misc-unsafe-memory-access=allow
 -Xms512m
 -Xmx2g
 -XX:+TieredCompilation
